# luahidapi

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  Makefile  README  luahidapi.c  luahidapi.h
cmake/: CPackConfig.cmake  DefineOptions.cmake
doc/examples/: test.lua  test2.lua  usb-hid-debug-test.lua  usb-hid-fullspeed-test.lua  usb-hid-lowspeed-test.lua
src/: CMakeLists.txt  luahidapi.c  luahidapi.h  luahidapi.rc.cmake  version.h.cmake
